# Smart_Market_AI

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  HIKITSUGI.txt  PROJECT_CONTEXT.md  README.md  README_run_symbol_universe_import_all.md  pyproject.toml  run_symbol_universe_import_all.bat
smai-ai-gateway/: .env.example  Project_Specification.md  README.md  SETUP.md  pyproject.toml  run_server.bat
smai-ai-gateway/app/: __init__.py  config.py  main.py
smai-ai-gateway/app/clients/: __init__.py  ollama_client.py
smai-ai-gateway/app/schemas/: __init__.py  chat.py  common.py  context_answer.py  llm_factor.py  summarize.py  tool_plan.py
smai-ai-gateway/app/services/: __init__.py  chat_service.py  context_answer_service.py  llm_factor_service.py  model_router.py  prompt_service.py  summarize_service.py  tool_plan_service.py
smai-ai-gateway/docs/: api_spec.md  architecture.md  prompt_policy.md  roadmap.md
smai-ai-gateway/tests/: conftest.py  test_chat_schema.py  test_config.py  test_context_answer_schema.py  test_context_answer_service.py  test_health.py  test_live_ollama_smoke.py  test_llm_factor_endpoint.py  test_llm_factor_service.py  test_model_router.py  test_models_endpoint.py  test_provider_errors.py  test_tool_plan_endpoint.py  test_tool_plan_schema.py  test_tool_plan_service.py
smai-notification-gateway/: README.md  pyproject.toml
smai-notification-gateway/src/notification_gateway/: __init__.py  dispatcher.py  models.py  (+1 more)
smai-notification-gateway/tests/: test_dispatcher.py  test_models.py  test_ntfy_channel.py  test_rule_evaluator.py
(+971 files in other folders)
