[project]
name = "smai-ai-gateway"
version = "0.1.0"
description = "Generic local-first LLM API Gateway for SMAI and related tools."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic",
  "uvicorn",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
